force-app/main/default/objects/Enquiry_Form__c/Enquiry_Form__c.object-meta.xml
<CustomObject>
    <label>Enquiry Form</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Enquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enquiry Form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>