force-app/main/default/objects/Enquiry_Form__c/fields/came_to_know_from__c.field-meta.xml
<CustomField>
    <fullName>came_to_know_from__c</fullName>
    <label>came to know from</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interner</fullName>
            </value>
            <value>
                <fullName>Workshop/Seminar</fullName>
            </value>
            <value>
                <fullName>Friends</fullName>
            </value>
            <value>
                <fullName>By call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>