force-app/main/default/objects/Enquiry_Form__c/fields/College_name__c.field-meta.xml
<CustomField>
    <fullName>College_name__c</fullName>
    <label>College name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>