force-app/main/default/objects/Enquiry_Form__c/fields/Courses_you_want_to_learn__c.field-meta.xml
<CustomField>
    <fullName>Courses_you_want_to_learn__c</fullName>
    <label>Courses you want to learn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>React</fullName>
            </value>
            <value>
                <fullName>DS + ML</fullName>
            </value>
            <value>
                <fullName>Full Stack</fullName>
            </value>
            <value>
                <fullName>Web Designing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>