force-app/main/default/objects/Enquiry_Form__c/fields/Current_status__c.field-meta.xml
<CustomField>
    <fullName>Current_status__c</fullName>
    <label>Current status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>