force-app/main/default/objects/Enquiry_Form__c/fields/Date_of_enquiry__c.field-meta.xml
<CustomField>
    <fullName>Date_of_enquiry__c</fullName>
    <label>Date of enquiry</label>
    <required>true</required>
    <type>Date</type>
</CustomField>