force-app/main/default/objects/Enquiry_Form__c/fields/Email_id__c.field-meta.xml
<CustomField>
    <fullName>Email_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Email id</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>