force-app/main/default/objects/Enquiry_Form__c/fields/Enquiry_Note__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Note__c</fullName>
    <label>Backup call  Note</label>
    <length>200</length>
    <type>Text</type>
</CustomField>