force-app/main/default/objects/Enquiry_Form__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>IF(ISPICKVAL(Gender__c ,&apos;Male&apos;),&apos;Mr&apos;&amp;&apos; &apos;&amp;First_Name__c&amp;&apos; &apos;&amp;Last_Name__c ,IF(ISPICKVAL(Gender__c,&apos;female&apos;),&apos;Miss&apos;&amp;&apos; &apos;&amp; First_Name__c&amp;&apos; &apos;&amp;Last_Name__c,First_Name__c&amp;&apos; &apos;&amp;Last_Name__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>