force-app/main/default/objects/Enquiry_Form__c/fields/Parent_name__c.field-meta.xml
<CustomField>
    <fullName>Parent_name__c</fullName>
    <label>Parent name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>