force-app/main/default/objects/Enquiry_Form__c/fields/Parent_s_occupation__c.field-meta.xml
<CustomField>
    <fullName>Parent_s_occupation__c</fullName>
    <label>Parent&apos;s occupation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>