force-app/main/default/objects/Enquiry_Form__c/fields/Passing_year__c.field-meta.xml
<CustomField>
    <fullName>Passing_year__c</fullName>
    <label>Passing year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>