force-app/main/default/objects/Enquiry_Form__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 th</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Post graduate</fullName>
            </value>
            <value>
                <fullName>BE / Btech</fullName>
            </value>
            <value>
                <fullName>ME / Mtech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>