force-app/main/default/objects/Enquiry_Form__c/fields/Technology_Awareness__c.field-meta.xml
<CustomField>
    <fullName>Technology_Awareness__c</fullName>
    <label>Technology Awareness</label>
    <length>200</length>
    <type>Text</type>
</CustomField>