force-app/main/default/objects/Enquiry_Form__c/validationRules/contact_number_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>contact_number_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Contact_No__c ) &lt;&gt; 10</errorConditionFormula>
    <errorDisplayField>Contact_No__c</errorDisplayField>
    <errorMessage>contact number should be 10 digit</errorMessage>
</ValidationRule>