force-app/main/default/objects/Enquiry_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>Courses_you_want_to_learn__c</columns>
    <columns>Contact_No__c</columns>
    <columns>Enquiry_Note__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>